agrego auto generacion de client para la api, pero los tests todavia no funcionan
